--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,15 @@ body {
     10px -9px 16px rgba(255, 208, 208, 0.25);
   border-radius: 5px;
 }
+.our-service-card-text {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 25px;
+  line-height: 37px;
+  margin: 22px;
+  color: #000000;
+}
 .our-services-card-2 {
   width: 100%;
   padding-top: 50px;
@@ -174,6 +183,19 @@ body {
   box-shadow: -12px 14px 18px rgba(255, 218, 218, 0.25),
     10px -9px 16px rgba(255, 208, 208, 0.25);
   border-radius: 5px;
+}
+.our-services-sub-card {
+  margin-left: 50px;
+}
+.our-services-card-heading {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  margin-left: 30px;
+  margin-top: 40px;
+  color: #000000;
 }
 /* .col-xs-15,
 .col-sm-15,
@@ -1078,6 +1100,25 @@ body {
     font-size: 24px;
     line-height: 30px;
     text-align: center;
+    color: #000000;
+  }
+  .our-service-card-text {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 30px;
+    margin: 22px;
+    color: #000000;
+  }
+  .our-services-card-heading {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 45px;
+    margin-left: 30px;
+    margin-top: 40px;
     color: #000000;
   }
   .our-services-card {
