--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@ body {
   text-decoration: none;
   color: #0d0d0d;
 }
+.navbar-brand {
+  width: 9.8rem;
+  height: 5rem;
+}
 .nav-btn {
   font-family: Poppins;
   font-style: normal;
@@ -949,7 +953,7 @@ body {
   /* Navbar */
 
   .nav-item {
-    padding: 1rem;
+    padding: 0.2rem;
   }
 
   .nav-link {
@@ -962,13 +966,17 @@ body {
     text-decoration: none;
     color: #0d0d0d;
   }
+  .navbar-brand {
+    width: 8rem;
+    height: 4rem;
+  }
   .nav-btn {
     font-family: Poppins;
     font-style: normal;
     font-weight: 500;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 45px;
-    padding: 12px 40px;
+    padding: 4px 20px;
     color: #ffffff;
     background: #ff385c;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
