--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 /* Navbar */
 body {
   background-color: #fff8f8;
+  margin: 0;
 }
 .nav-item {
   padding: 1rem;
@@ -163,11 +164,15 @@ body {
 }
 .our-services-card {
   width: 612px;
-  height: 378px;
+  /* height: 378px; */
   background: #ffffff;
   box-shadow: -12px 14px 18px rgba(255, 218, 218, 0.25),
     10px -9px 16px rgba(255, 208, 208, 0.25);
   border-radius: 5px;
+}
+.our-services-quarter-circle-image {
+  float: right;
+  width: 100px;
 }
 .our-service-card-text {
   font-family: Poppins;
@@ -187,9 +192,14 @@ body {
   box-shadow: -12px 14px 18px rgba(255, 218, 218, 0.25),
     10px -9px 16px rgba(255, 208, 208, 0.25);
   border-radius: 5px;
+  text-align: center;
 }
 .our-services-sub-card {
-  margin-left: 50px;
+  /* margin-left: 20px; */
+}
+.fa-check {
+  margin: 10px;
+  color: #38d600;
 }
 .our-services-card-heading {
   font-family: Poppins;
@@ -253,7 +263,7 @@ body {
   color: #ffffff;
 }
 .expect-card {
-  width: 430px;
+  width: 30.5rem;
   margin: 20px;
   text-align: center;
 }
@@ -918,9 +928,9 @@ body {
   color: #000000;
 }
 .input-box {
-  width: 619px;
-  height: 76px;
-  margin-bottom: 54px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   padding-left: 35px;
   background: #ffffff;
   border: 1px solid #ff385c;
@@ -931,7 +941,6 @@ body {
   font-weight: normal;
   font-size: 35px;
   line-height: 52px;
-  /* identical to box height */
 
   color: #5a5959;
 }
@@ -948,35 +957,35 @@ body {
   padding: 7px 70px;
   color: #ffffff;
 }
-
+/* **************************************************************************************************************************** */
 @media (min-width: 300px) and (max-width: 580px) {
   /* Navbar */
 
   .nav-item {
-    padding: 0.2rem;
+    padding: 0.1rem;
   }
 
   .nav-link {
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 500;
-    line-height: 45px;
+    line-height: 30px;
     text-decoration: none;
     color: #0d0d0d;
   }
   .navbar-brand {
-    width: 8rem;
-    height: 4rem;
+    width: 6rem;
+    height: 3rem;
   }
   .nav-btn {
     font-family: Poppins;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 45px;
-    padding: 4px 20px;
+    font-size: 16px;
+    line-height: 35px;
+    padding: 0px 10px;
     color: #ffffff;
     background: #ff385c;
     box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
@@ -985,12 +994,12 @@ body {
   }
   .nav-link:hover {
     color: #ff868a;
-    font-size: 34px;
+    font-size: 25px;
     font-weight: bold;
   }
   .nav-link:active {
     color: #ff868a;
-    font-size: 34px;
+    font-size: 25px;
     font-weight: bold;
   }
   .home-row-1 {
@@ -1000,8 +1009,8 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 30px;
-    line-height: 72px;
+    font-size: 25px;
+    line-height: 30px;
 
     color: #333333;
   }
@@ -1009,7 +1018,7 @@ body {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 36px;
 
     color: #000000;
@@ -1018,7 +1027,7 @@ body {
     background: #ff385c;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-style: none;
-    padding: 2px 10px;
+    padding: 1px 10px;
     margin: 3% 6%;
     margin-left: 0%;
     border-radius: 10px;
@@ -1037,7 +1046,7 @@ body {
     box-sizing: border-box;
     border-radius: 10px;
     font-family: Poppins;
-    padding: 2px 10px;
+    padding: 1px 10px;
     font-style: normal;
     font-weight: 600;
     font-size: 15px;
@@ -1050,8 +1059,8 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 30px;
-    line-height: 50px;
+    font-size: 26px;
+    line-height: 45px;
     text-align: center;
     color: #333333;
   }
@@ -1059,8 +1068,8 @@ body {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 22px;
-    line-height: 36px;
+    font-size: 20px;
+    line-height: 30px;
     text-align: center;
     color: #000000;
   }
@@ -1069,25 +1078,25 @@ body {
     border: 2px solid #ff385c;
     box-sizing: border-box;
     border-radius: 20px;
-    padding: 25px;
+    padding: 20px;
   }
   .freelance-card-content {
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 20px;
-    line-height: 37px;
+    font-size: 16px;
+    line-height: 28px;
 
     color: #000000;
   }
   .freelance-card-image-1 {
-    width: 480px;
+    width: 300px;
   }
   .freelance-card-image-2 {
-    width: 500px;
+    width: 300px;
   }
   .freelance-card-image-3 {
-    width: 500px;
+    width: 300px;
   }
   .freelance-row {
     margin: 5%;
@@ -1096,17 +1105,21 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 40px;
-    line-height: 90px;
+    font-size: 30px;
+    line-height: 50px;
     text-align: center;
     color: #333333;
+  }
+  .our-services-quarter-circle-image {
+    float: right;
+    width: 75px;
   }
   .our-services-content {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 20px;
+    line-height: 25px;
     text-align: center;
     color: #000000;
   }
@@ -1114,7 +1127,7 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 300;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 30px;
     margin: 22px;
     color: #000000;
@@ -1123,7 +1136,7 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 28px;
+    font-size: 25px;
     line-height: 45px;
     margin-left: 30px;
     margin-top: 40px;
@@ -1131,39 +1144,40 @@ body {
   }
   .our-services-card {
     width: 612px;
-    height: 378px;
     background: #ffffff;
     box-shadow: -12px 14px 18px rgba(255, 218, 218, 0.25),
       10px -9px 16px rgba(255, 208, 208, 0.25);
     border-radius: 5px;
   }
   .our-services-card-2 {
-    width: 300px;
+    width: 250px;
     margin: 0% auto;
     margin-bottom: 4rem;
     background: #ffffff;
     box-shadow: -12px 14px 18px rgba(255, 218, 218, 0.25),
       10px -9px 16px rgba(255, 208, 208, 0.25);
     border-radius: 5px;
+    text-align: center;
   }
   .service-img {
     margin: 20px;
-    width: 80px;
+    width: 70px;
   }
   .expect {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 40px;
-    line-height: 50px;
+    font-size: 30px;
+    line-height: 45px;
     color: #ffffff;
     margin-bottom: 20px;
+    margin: 10px;
   }
   .expect-message {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 28px;
 
     color: #ffffff;
@@ -1173,32 +1187,24 @@ body {
     margin: 20px;
     text-align: center;
   }
-  .expect-card-logo {
-    width: 150px;
-    height: 150px;
-    margin: 10px auto;
-    background: #ffffff;
-    box-shadow: 4px 7px 4px rgba(255, 233, 233, 0.25);
-    border-radius: 20px;
-  }
   .expect-card-image {
-    width: 100px;
+    width: 80px;
   }
   .expect-card-title {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 28px;
-    line-height: 60px;
-    margin-top: 50px;
+    font-size: 25px;
+    line-height: 50px;
+    margin-top: 30px;
     color: #ffffff;
   }
   .expect-card-content {
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
+    font-size: 16px;
+    line-height: 25px;
     margin-top: 20px;
     color: #ffffff;
   }
@@ -1212,8 +1218,8 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 40px;
-    line-height: 90px;
+    font-size: 30px;
+    line-height: 60px;
 
     color: #333333;
   }
@@ -1221,7 +1227,7 @@ body {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 28px;
+    font-size: 22px;
     line-height: 33px;
 
     color: #000000;
@@ -1822,8 +1828,8 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 40px;
-    line-height: 90px;
+    font-size: 30px;
+    line-height: 40px;
 
     color: #333333;
   }
@@ -1831,15 +1837,14 @@ body {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 30px;
 
     color: #000000;
   }
   .input-box {
-    width: 450px;
-    height: 50px;
-    margin-bottom: 30px;
+    height: 40px;
+    margin: auto;
     padding-left: 28px;
     background: #ffffff;
     border: 1px solid #ff385c;
@@ -1848,8 +1853,8 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: normal;
-    font-size: 25px;
-    line-height: 52px;
+    font-size: 20px;
+    /* line-height: 52px; */
     /* identical to box height */
 
     color: #5a5959;
@@ -1861,13 +1866,13 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 25px;
-    line-height: 52px;
+    font-size: 16px;
+    line-height: 20px;
     /* identical to box height */
-    padding: 2px 30px;
+    padding: 10px 10px;
     color: #ffffff;
   }
   .contact-image {
-    width: 500px;
+    width: 250px;
   }
 }
