--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,9 @@ body {
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
-  font-size: 58px;
+  font-size: 50px;
   line-height: 72px;
-
+  margin-bottom: 1rem;
   color: #333333;
 }
 .home-content {
@@ -1040,7 +1040,7 @@ body {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
-    font-size: 25px;
+    font-size: 30px;
     line-height: 30px;
 
     color: #333333;
