--- a/styles.css
+++ b/styles.css
@@ -363,7 +363,7 @@ body {
 }
 
 .testim .arrow:hover {
-  color: #ea830e;
+  color: #ff385c;
 }
 
 .testim .arrow.left {
@@ -405,8 +405,8 @@ body {
 
 .testim .dots .dot.active,
 .testim .dots .dot:hover {
-  background: #ea830e;
-  border-color: #ea830e;
+  background: #ff385c;
+  border-color: #ff385c;
 }
 
 .testim .dots .dot.active {
@@ -453,23 +453,18 @@ body {
   margin: 3rem auto;
 }
 .testim .cont div .img h2 {
-  color: #ea830e;
+  color: #ff385c;
   font-size: 20px;
-  margin: 15px 0;
+  margin: 15px 0 7px 0;
   text-align: left;
+  font-family: Poppins;
 }
 .testim .cont div p {
   font-size: 30px;
   color: rgb(39, 35, 35);
   width: 80%;
   margin: auto;
-}
-
-.testim .cont div .img .fa-star {
-  font-size: 20px;
-  margin-top: 25px;
-  color: #ffdf00;
-  text-align: left;
+  font-family: Inter;
 }
 
 .testim .cont div .img p {
@@ -478,6 +473,7 @@ body {
   /* width: 80%; */
   margin: auto;
   text-align: left;
+  font-family: Inter;
 }
 .testim .cont div.active .img img {
   -webkit-animation: testim-show 0.5s ease-in-out forwards;
@@ -526,20 +522,6 @@ body {
   -o-animation: testim-content-out 0.5s ease-in-out forwards;
   animation: testim-content-out 0.5s ease-in-out forwards;
 }
-.testim .cont div.inactive .fa-star {
-  -webkit-animation: testim-hide 0.5s ease-in-out forwards;
-  -moz-animation: testim-hide 0.5s ease-in-out forwards;
-  -ms-animation: testim-hide 0.5s ease-in-out forwards;
-  -o-animation: testim-hide 0.5s ease-in-out forwards;
-  animation: testim-hide 0.5s ease-in-out forwards;
-}
-.testim .cont div.active .fa-star {
-  -webkit-animation: testim-show 0.5s ease-in-out forwards;
-  -moz-animation: testim-show 0.5s ease-in-out forwards;
-  -ms-animation: testim-show 0.5s ease-in-out forwards;
-  -o-animation: testim-show 0.5s ease-in-out forwards;
-  animation: testim-show 0.5s ease-in-out forwards;
-}
 @-webkit-keyframes testim-scale {
   0% {
     -webkit-box-shadow: 0px 0px 0px 0px #eee;
@@ -552,13 +534,13 @@ body {
   }
 
   70% {
-    -webkit-box-shadow: 0px 0px 10px 5px #ea830e;
-    box-shadow: 0px 0px 10px 5px #ea830e;
+    -webkit-box-shadow: 0px 0px 10px 5px #ff385c;
+    box-shadow: 0px 0px 10px 5px #ff385c;
   }
 
   100% {
-    -webkit-box-shadow: 0px 0px 0px 0px #ea830e;
-    box-shadow: 0px 0px 0px 0px #ea830e;
+    -webkit-box-shadow: 0px 0px 0px 0px #ff385c;
+    box-shadow: 0px 0px 0px 0px #ff385c;
   }
 }
 
@@ -574,13 +556,13 @@ body {
   }
 
   70% {
-    -moz-box-shadow: 0px 0px 10px 5px #ea830e;
-    box-shadow: 0px 0px 10px 5px #ea830e;
+    -moz-box-shadow: 0px 0px 10px 5px #ff385c;
+    box-shadow: 0px 0px 10px 5px #ff385c;
   }
 
   100% {
-    -moz-box-shadow: 0px 0px 0px 0px #ea830e;
-    box-shadow: 0px 0px 0px 0px #ea830e;
+    -moz-box-shadow: 0px 0px 0px 0px #ff385c;
+    box-shadow: 0px 0px 0px 0px #ff385c;
   }
 }
 
@@ -596,13 +578,13 @@ body {
   }
 
   70% {
-    -ms-box-shadow: 0px 0px 10px 5px #ea830e;
-    box-shadow: 0px 0px 10px 5px #ea830e;
+    -ms-box-shadow: 0px 0px 10px 5px #ff385c;
+    box-shadow: 0px 0px 10px 5px #ff385c;
   }
 
   100% {
-    -ms-box-shadow: 0px 0px 0px 0px #ea830e;
-    box-shadow: 0px 0px 0px 0px #ea830e;
+    -ms-box-shadow: 0px 0px 0px 0px #ff385c;
+    box-shadow: 0px 0px 0px 0px #ff385c;
   }
 }
 
@@ -618,13 +600,13 @@ body {
   }
 
   70% {
-    -o-box-shadow: 0px 0px 10px 5px #ea830e;
-    box-shadow: 0px 0px 10px 5px #ea830e;
+    -o-box-shadow: 0px 0px 10px 5px #ff385c;
+    box-shadow: 0px 0px 10px 5px #ff385c;
   }
 
   100% {
-    -o-box-shadow: 0px 0px 0px 0px #ea830e;
-    box-shadow: 0px 0px 0px 0px #ea830e;
+    -o-box-shadow: 0px 0px 0px 0px #ff385c;
+    box-shadow: 0px 0px 0px 0px #ff385c;
   }
 }
 
@@ -638,11 +620,11 @@ body {
   }
 
   70% {
-    box-shadow: 0px 0px 10px 5px #ea830e;
+    box-shadow: 0px 0px 10px 5px #ff385c;
   }
 
   100% {
-    box-shadow: 0px 0px 0px 0px #ea830e;
+    box-shadow: 0px 0px 0px 0px #ff385c;
   }
 }
 
@@ -1309,7 +1291,7 @@ body {
   }
 
   .testim .arrow:hover {
-    color: #ea830e;
+    color: #ff385c;
   }
 
   .testim .arrow.left {
@@ -1334,12 +1316,12 @@ body {
   .testim .dots .dot {
     list-style-type: none;
     display: inline-block;
-    width: 12px;
-    height: 12px;
+    width: 8px;
+    height: 8px;
     border-radius: 50%;
     background-color: grey;
     border: 1px solid grey;
-    margin: 0 10px;
+    margin: 0 6px;
     cursor: pointer;
     -webkit-transition: all 0.5s ease-in-out;
     -ms-transition: all 0.5s ease-in-out;
@@ -1351,8 +1333,8 @@ body {
 
   .testim .dots .dot.active,
   .testim .dots .dot:hover {
-    background: #ea830e;
-    border-color: #ea830e;
+    background: #ff385c;
+    border-color: #ff385c;
   }
 
   .testim .dots .dot.active {
@@ -1388,23 +1370,38 @@ body {
 
   .testim .cont div .img img {
     display: block;
-    width: 100px;
-    height: 100px;
-    margin: auto;
+    width: 80px;
+    float: left;
+    height: 80px;
+    margin-right: 30px;
     border-radius: 50%;
   }
-
-  .testim .cont div h2 {
-    color: #ea830e;
-    font-size: 30px;
-    margin: 15px 0;
+  .testim .cont div .img {
+    width: 60%;
+    margin: 3rem auto;
   }
-
+  .testim .cont div .img h2 {
+    color: #ff385c;
+    font-size: 16px;
+    margin: 15px 0 7px 0;
+    text-align: left;
+    font-family: Poppins;
+  }
   .testim .cont div p {
-    font-size: 20px;
+    font-size: 22px;
     color: rgb(39, 35, 35);
     width: 80%;
     margin: auto;
+    font-family: Inter;
+  }
+
+  .testim .cont div .img p {
+    font-size: 16px;
+    color: rgb(39, 35, 35);
+    /* width: 80%; */
+    margin: auto;
+    text-align: left;
+    font-family: Inter;
   }
 
   .testim .cont div.active .img img {
@@ -1467,13 +1464,13 @@ body {
     }
 
     70% {
-      -webkit-box-shadow: 0px 0px 10px 5px #ea830e;
-      box-shadow: 0px 0px 10px 5px #ea830e;
+      -webkit-box-shadow: 0px 0px 10px 5px #ff385c;
+      box-shadow: 0px 0px 10px 5px #ff385c;
     }
 
     100% {
-      -webkit-box-shadow: 0px 0px 0px 0px #ea830e;
-      box-shadow: 0px 0px 0px 0px #ea830e;
+      -webkit-box-shadow: 0px 0px 0px 0px #ff385c;
+      box-shadow: 0px 0px 0px 0px #ff385c;
     }
   }
 
@@ -1489,13 +1486,13 @@ body {
     }
 
     70% {
-      -moz-box-shadow: 0px 0px 10px 5px #ea830e;
-      box-shadow: 0px 0px 10px 5px #ea830e;
+      -moz-box-shadow: 0px 0px 10px 5px #ff385c;
+      box-shadow: 0px 0px 10px 5px #ff385c;
     }
 
     100% {
-      -moz-box-shadow: 0px 0px 0px 0px #ea830e;
-      box-shadow: 0px 0px 0px 0px #ea830e;
+      -moz-box-shadow: 0px 0px 0px 0px #ff385c;
+      box-shadow: 0px 0px 0px 0px #ff385c;
     }
   }
 
@@ -1511,13 +1508,13 @@ body {
     }
 
     70% {
-      -ms-box-shadow: 0px 0px 10px 5px #ea830e;
-      box-shadow: 0px 0px 10px 5px #ea830e;
+      -ms-box-shadow: 0px 0px 10px 5px #ff385c;
+      box-shadow: 0px 0px 10px 5px #ff385c;
     }
 
     100% {
-      -ms-box-shadow: 0px 0px 0px 0px #ea830e;
-      box-shadow: 0px 0px 0px 0px #ea830e;
+      -ms-box-shadow: 0px 0px 0px 0px #ff385c;
+      box-shadow: 0px 0px 0px 0px #ff385c;
     }
   }
 
@@ -1533,13 +1530,13 @@ body {
     }
 
     70% {
-      -o-box-shadow: 0px 0px 10px 5px #ea830e;
-      box-shadow: 0px 0px 10px 5px #ea830e;
+      -o-box-shadow: 0px 0px 10px 5px #ff385c;
+      box-shadow: 0px 0px 10px 5px #ff385c;
     }
 
     100% {
-      -o-box-shadow: 0px 0px 0px 0px #ea830e;
-      box-shadow: 0px 0px 0px 0px #ea830e;
+      -o-box-shadow: 0px 0px 0px 0px #ff385c;
+      box-shadow: 0px 0px 0px 0px #ff385c;
     }
   }
 
@@ -1553,11 +1550,11 @@ body {
     }
 
     70% {
-      box-shadow: 0px 0px 10px 5px #ea830e;
+      box-shadow: 0px 0px 10px 5px #ff385c;
     }
 
     100% {
-      box-shadow: 0px 0px 0px 0px #ea830e;
+      box-shadow: 0px 0px 0px 0px #ff385c;
     }
   }
 
